# AI-TCP

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  archive_cli_files.py  build_all.py  commit_message.txt  conftest.py  dispatcher.py  gen_dmc_html.py  generate_task_log_markdown.py  get_file_structure.py  main.go  main.py  move_new_task.py  new_task.json  output_watcher.py  remove_temp_file_12.py  remove_temp_file_16.py  remove_temp_file_18.py  remove_temp_file_19.py  remove_temp_file_26.py  remove_temp_file_27.py  remove_temp_file_4.py  remove_temp_file_9.py  requirements.txt  run_task_workflow.py  run_validation.py  run_validation_final.py  run_validation_robust.py  run_validation_script.py  task_bridge_runner.py  temp_runner.py  temp_validator_runner.py  validate_all.py  validate_yaml.py  validator.py
cli_instruction/: new_task.json
cli_logs/: output.json
dmc_sessions/: README.md
docs/: AI-TCP_FlagWorkflow.md  AI-TCP_RFC.md  README (2).md  README.md  direct_mental_care.md  graph_payload_usage.md  transition_plan.md
flatbuffers/: ai_tcp_packet_generated.fbs  ephemeral_session.fbs
generated_html/: DMC_20250618.html  README.md  dmc_html_index.html  index_all_generated.html  index_dmc_sessions.html  poc_trace_graph.mmd.md  structure_map_master_schema.html  structured_yaml_index.html
go/: main.go
html_templates/: dmc_base_template.html
logs/: TaskValidation.txt  repo_check_20250628_114430.txt  structure_validation_auto.json  work_results.txt
original_docs/: poc_design_gd.md
src/api_server/: Cargo.toml  api_server.rs  main.rs
(+103 files in other folders)
