[package]
name = "api_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api_server"
path = "main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bytes = "1.0"
kairo_rust_core = { path = "../../KAIRO/rust-core", package = "kairo_rust_core", version = "0.1.0" }
